# CustManage_Backend

./: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 01cb6cccf69a_add_user_role_to_m_users.py  20bb2c4919c1_add_company_id_to_tasks.py  28d8d7a43604_allow_null_for_user_name_and_password.py  390314b7e59b_add_cascade_delete_to_purchase_details.py  4b503e800b41_add_ondelete_cascade_to_foreign_keys.py  4bfd34dbe284_force_sync.py  5a6d6b83fc63_add_user_role_nullable_true.py  8d2e3726ab95_すべてのテーブルでcompany_idをnullable_trueに.py  b17aa5ce3d08_add_user_role_to_m_users.py  d74265ddb20e_fix_company_id_type_to_uuid_in_m_users.py
api/: main.py  migrate_db.py
api/constants/: status.py
api/cruds/: client.py  company.py  contact.py  department.py  purchase_details.py  sales.py  task.py  user.py
api/database/: db.py
api/models/: client.py  company.py  contact.py  department.py  purchase_details.py  sales.py  task.py  users.py
api/routers/: client.py  company.py  contact.py  department.py  purchase_details.py  sales.py  tasks.py  user.py
api/schemas/: base.py  client.py  company.py  contact.py  department.py  purchase_details.py  sales.py  task.py  user.py
api/utils/: auth.py
