[tool.poetry]
name = "demo-app"
version = "0.1.0"
description = ""
authors = ["Manato <manato.webdesign@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.116.1"
uvicorn = { extras = ["standard"], version = "^0.35.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.43" }
python-jose = "^3.5.0"
alembic = "^1.16.5"
psycopg2-binary = "^2.9.10"
passlib = {version = "1.7.4", extras = ["bcrypt"]}
bcrypt = "3.2.2"
sendgrid = "*"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
alembic = "^1.16.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
